<resources>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">XXXXXXXXXXX</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">XXXXXXXXXXX</string>
    <string name="app_style">MAP</string>
    <string name="app_code">CANMAP</string>
    <string name="app_name">Canal Map</string>
    <string name="title_map">Canal Map UK</string>
    <string name="subtitle_map">UK Canal and River Map</string>
    <string name="search_title">Search Map</string>
    <string-array name="reviewed_feedback">
        <item>Being reviewed</item>
        <item></item>
        <item>Please revise text</item>
        <item>Please revise image</item>
        <item>Please reconsider position</item>
        <item>Not relevant</item>
    </string-array>
    <string-array name="published_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string-array name="entitytype_array">
        <item>Boat Trader</item>
        <item>Cyclist</item>
        <item>Narrow Boat</item>
        <item>Walker</item>
        <item>Wide Beam Boat</item>
    </string-array>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="entitySettingsTitle">My Social Profile</string>
    <string name="entityRoutesTitle">My Routes</string>
    <string name="premiumTitle">Premium</string>
    <string name="entitiesTitle">Social Network</string>
    <string name="editTextTitle">Location Description</string>
    <string name="favouritesTitle">Favourites</string>
    <string name="mySettingsTitle">My Settings</string>
    <string name="why_reset_db">Reset to empty database</string>
    <string name="why_copy_tosdcard">Copy to SdCard</string>
    <string name="why_resetEntities">Reset entities</string>
    <string name="why_copy_fromsdcard">Copy from SdCard</string>
    <string name="copy_from">Copy From</string>
    <string name="copy_to">Copy To</string>
    <string name="resetEntities">Entities</string>
    <string name="why_clear_ignore">Clear ignore indicator</string>
    <string name="clear_ignore">Ignore</string>
    <string name="why_repair_ownership">Repair ownership</string>
    <string name="why_clear_premium">Clear Premium</string>
    <string name="why_review_request">Request to be Reviewer</string>
    <string name="why_publish_request">Request to be Publisher</string>
    <string name="why_administrator_request">Request to be Administrator</string>
    <string name="why_premium_request">Request to be Premium</string>
    <string name="check_status_request">Initialise Roles</string>
    <string name="reset_requests">Reset Requests</string>
    <string name="why_poi_backup">Backup points of interest</string>
    <string name="why_poi_restore">Restore points of interest</string>
    <string name="cleaning">cleaning\nplease wait\nthis may take a while</string>
    <string name="check_system">Check System</string>
    <string name="entityTypeTitle">Select a type...</string>
    <string name="phoneTitle">Enter your phone number</string>
    <string name="phoneTag">Phone number</string>
    <string name="phoneHint">phone number (optional)</string>
    <string name="tradingTitle">Enter your trading name</string>
    <string name="tradingTag">Trading name</string>
    <string name="tradingHint">name of your business (optional)</string>
    <string name="facebookTitle">Facebook Page Name</string>
    <string name="facebookHint">facebook page name (optional)</string>
    <string name="twitterTitle">Twitter User Name</string>
    <string name="twitterHint">twitter user name (optional)</string>
    <string name="instagramTitle">Instagram User Name</string>
    <string name="instagramHint">instagram user name (optional)</string>
    <string name="youtubeTitle">Youtube Channel Reference</string>
    <string name="youtubeHint">youtube channel (optional)</string>
    <string name="patreonTitle">Patreon Name</string>
    <string name="patreonHint">patreon name (optional)</string>
    <string name="websiteTitle">Enter your Website URL</string>
    <string name="websiteHint">website (optional)</string>
    <string name="tracker1Title">Locks</string>
    <string name="tracker2Title">Bridges</string>
    <string name="phoneNumberHint">phone number</string>
    <string name="verificationCodeHint">verification code</string>
    <string name="boatNameHint">boat, your name or code (optional)</string>
    <string name="locationHint">description (max 280 characters)</string>
    <string name="boatNameTitle">Enter boat or your name</string>
    <string name="boatTypeTitle">Select type</string>
    <string name="entityEmailTitle">Email Address</string>
    <string name="entityEmailHint">email address (optional)</string>
    <string name="entityReference">CRT Reference</string>
    <string name="entityReferenceHint">boat reference 6 numbers (optional)</string>
    <string name="entityMetaData1Title">Boat length (metres)</string>
    <string name="entityMetaData1Hint">boat length in metres (optional)</string>
    <string name="entityMetaData2Title">Boat width (metres)</string>
    <string name="entityMetaData2Hint">boat width in metres (optional)</string>
    <string name="boatPeopleHint">description (optional)</string>
    <string name="boatPeopleTitle">Enter description</string>
    <string name="rolesSummary">Please confirm your role request...</string>
    <string name="rolesTitle">You have to verify yourself in order to do that, please follow these simple steps to add that role to your membership</string>
    <string name="rolesPhoneNumberTitle">We need your mobile phone number to verify you</string>
    <string name="rolesVerifyTitle">Please check your text messages for the verification code</string>
    <string name="mySettingsSummary">Alter your application setting information below...</string>
    <string name="mySettingsUpdatePosition">Slide to update your position at different intervals, the more often you update your position, the faster your battery power will be used...</string>
    <string name="boatTwitterHint">twitter url</string>
    <string name="boatTwitterTitle">Enter your twitter url</string>
    <string name="boatFacebookHint">facebook url</string>
    <string name="boatFacebookTitle">Enter your facebook url</string>
    <string name="boatIconTitle">Select your Icon?</string>
    <string name="hireBoatQuestion">Is this a hire boat</string>
    <string name="markerLocationSummary">Please enter your text to associate it with this location...</string>
    <string name="selectSymbolSummary">Please select a symbol to use...</string>
    <string name="selectMarkerSummary">Please select a marker to use...</string>
    <string name="aboutUsSummary">This Canal Map has been developed by TycTak Ltd a specialist UK computer company which happens to be run by a passionate Narrow Boat owner. Look out for our narrow boat \"Locksley\" and give us a wave.\n\nThe map has been designed and improved by canal users for canal users and we have drawn upon what boat owners would actually need from a mapping system.  We intend continue its development, our aim being to make it the definitive and essential guide to enjoying yourself on the UK waterways.\n\nMap data is supplied under the Open Data Commons Open Database Licence (ODbL) by the OpenStreetMap Foundation - http://www.openstreetmap.org/copyright.\n\nThe map style and display is solely owned by TycTak Ltd, no reproduction is allowed unless expressly permitted, please contact support@tyctak.com for further information.\n\nNB* We cannot guarantee complete accuracy and so you should also check locally in advance for anything that is particularily vital to your journey.\n\nNote that this map has not been primarily developed for Wide Beam boats, therefore we have not denoted whether a canal is wide enough for your craft, please consider other navigational resources when checking your journey.</string>
    <string name="premiumOption">That option is a Premium Feature</string>
    <string name="premiumSummary">The majority of this canal map is free, however as narrow boat owners ourselves please consider supporting our on-going costs by subscribing to our premium features.</string>
    <string name="aboutUs">About Canal Map</string>
    <string name="premium">Premium Feature</string>
    <string name="aboutUsSupportContext">The following buttons are error fixing features for use only when advised by support...</string>
    <string name="waterwaysCoveredSummary">Click on route name for details...</string>
    <string name="symbolsTitle">Symbols</string>
    <string name="symbolsSummary">A list of all the symbols used on the Canal Map</string>
    <string name="symbolsFilter">Please click on a symbol to allow you to filter it out on the map. Symbols that are shown in grey will not show on the map once you press the filter button on the main map screen.</string>
    <string name="markersTitle">Markers</string>
    <string name="markersSummary">A list of markers you can use on the Canal Map</string>
    <string name="markersFilter">Please click on a marker to allow you to filter it out on the map. Markers that are shown in grey will not show on the map once you press the filter button on the main map screen.</string>
    <string name="waterwayName">Details of the waterway</string>
    <string name="editDoubleFormat">1234567890.</string>
    <string name="editNumberFormat">1234567890</string>
    <string name="editTextFormat">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 &amp;,.</string>
    <string name="editTextFormatFull">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 &amp;,.;:-+@!#$()/?"*_'</string>
    <string name="editUrlFormat">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 &amp;,./:</string>
    <string name="editTwitterUsernameFormat">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_</string>
    <string name="editInstagramUsernameFormat">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_.</string>
    <string name="editFacebookPagenameFormat">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.</string>
    <string name="displayStatsTitle">Display Where we\'ve Been</string>
    <string name="locationMapTitle">Track Current Map Location</string>
    <string name="favouriteListTitle">Display List of Favourite Boats</string>
    <string name="locationSend">Sending current position to others</string>
    <string name="locationStopSend">Stopped sending current position</string>
    <string name="locationInvalid">You must enter your profile settings first</string>
    <string name="reset_database">Canal Map has been reset</string>
    <string name="clear_cache">The cache is cleared, please restart application</string>
    <string name="empty_waterway">The waterway has been cleared, please restart application</string>
    <string name="copy_sdcard_technical">adb pull /storage/emulated/0/cancam.sqlite</string>
    <string name="copy_sdcard">Database has been copied to SD Card</string>
    <string name="already_on_sdcard">Database is already on SD Card</string>
    <string name="unable_as_on_sdcard">Database is on SD Card so unable to copy</string>
    <string name="initialise_database">The database has been initialised</string>
    <string name="title_activity_dialog__published">Dialog_Published</string>
    <string name="title_activity_dialog__icons">Dialog_Icons</string>
    <string name="title_activity_dialog__filterpois">Dialog_FilterPois</string>
    <string name="title_activity_dialog__action">Dialog_Action</string>
    <string name="title_activity_dialog__simpleroutes">Dialog_SimpleRoutes</string>
    <string name="title_activity_dialog__markers">Dialog_Markers</string>
    <string name="title_activity_dialog__markers_display">Dialog_Markers Display</string>
    <string name="title_activity_dialog__select">Dialog_Select</string>
    <string name="title_activity_dialog__symbols">Dialog_Symbols</string>
</resources>