<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/gp_one"
        android:checkableBehavior="single">

        <item
            android:id="@+id/entitysettingsmenu"
            android:icon="@drawable/ic_directions_boat_black_24dp"
            android:title="@string/entitySettingsTitle"
            android:onClick="entitySettingsOnClick"/>

        <item
            android:id="@+id/mysettingsmenu"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/mySettingsTitle"
            android:onClick="mySettingsOnClick"/>

        <item
            android:id="@+id/entities"
            android:icon="@drawable/ic_people_black"
            android:title="@string/entitiesTitle"
            android:onClick="entitiesOnClick"/>

        <item
            android:id="@+id/waterways_covered"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/entityRoutesTitle"
            android:onClick="routesCoveredOnClick"/>
    </group>

    <group android:id="@+id/gp_two"
        android:checkableBehavior="single">

        <item
            android:id="@+id/premiummenu"
            android:icon="@drawable/ic_money_black"
            android:title="@string/premiumTitle"
            android:onClick="premiumOnClick"/>

    </group>

    <item
        android:id="@+id/symbols"
        android:icon="@drawable/ic_list"
        android:title="Symbols"
        android:onClick="symbolsOnClick"/>

    <item
        android:id="@+id/markers"
        android:icon="@drawable/ic_list"
        android:title="Markers"
        android:onClick="markersOnClick"/>

    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/ic_person"
        android:title="About Canal Map"
        android:onClick="aboutUsOnClick"/>

</menu>